projetGL/src/test/deca/context/valid/provided/test_4.deca
// Description:
//    Programme minimaliste utilisant println(vide).
//
// Resultats:
//    println
//

{
        println();
}
