projetGL/src/test/deca/context/invalid/provided/invalide_14_Identifier.deca
// Description : Utilisation d'une variable sans étre définit
// Sortie : 
// ERROR : La variable x n'est pas définie.

{
    println(x);
}
